<resources>

    <string name="menu_settings">Innstillinger</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="title_activity_health_status">HealthStatusActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_activity_treatment">TreatmentActivity</string>
    <string name="title_activity_manual">ManualActivity</string>
    <string name="health_status_checkbox"></string>
    <string name="health_status_checkbox2">Sett helsestatus</string>
    <string name="instructions">Her er instruksjoner!</string>
    <string name="log">Heeeeeeeeere\'s loggy</string>
    <string name="notifications">Notifications</string>
    <string name="editchild">Endre barn</string>
    <string name="register_treatment">Registrer behandling</string>
    <string name="makemedicationplan">Lag medisineringsplan</string>
    <string name="existingmedicationplan">List ut medisineringsplanene (gronn/rod), som igjen leder til oversikt medisinene i de enkelte planene. Der skal man kunne legge til og fjerne medisiner. </string>
    <string name="name">"Navn: "</string>
    <string name="addmedication">"Legg til medisin: "</string>
    <string name="submit">Legg til</string>
	<string name="date">Dato</string>
	<string name="medicine">Medisin</string>
	<string name="download_error">En feil skjedde under nedlasting av informasjon. Vennsligst sjekk internett tilkoblingen din</string>
    <string name="dose">"Dose: "</string>
    <string name="date_error">Ugyldig datoformat. Lovlig datoformat er YYYY-MM-DD</string>
    <string name="time">"Tidspunkt: "</string>
    <string name="manualinfo">Velg medisin for å se informasjon om korrekt bruk</string>
	<string name ="dateformat">(yyyy-mm-dd)</string>
	<string name="FlutideWhat">Et inhalasjonssteroid som brukes fast slik legen har bestemt. Effekten sees først etter noen dagers bruk, og gjør at betennelsesreaksjonen i luftveiene til barnet demper seg. Dette hindrer barnets astma/betennelsesreaksjon i å utvikle seg og hindrer utvikling av sykdommen.</string>
	<string name="VentolineWhat">En inhalasjonsmedisin som gjør at musklene rundt forgreiningene i lungene slapper av slik at lungene åpnes og det blir lettere å puste.</string>
	<string name="SeretideWhat">En inhalasjonsmedisin som både gjør at musklene rundt forgreiningene i lungene slapper av, og et steroid som demper betennelsesreaksjonen i lungene.</string>
	<string name="FlutideInfo">Alle sprayinhalasjoner må gis med inhalasjonskammer (Aerochamber, Optichamber, Babyhaler eller lignende) for å sikre at barnet får pustet inn medisinen på riktig måte. Etter inhalasjon med steroider må barnet alltid skylle munn, drikke eller pusse tenner for å fjerne rester av pulver fra munnen. Blir restene igjen i munnen kan det oppstå en smertefull soppinfeksjon i munnen.  
	</string>
	<string name="VentolineInfo">Alle sprayinhalasjoner må gis med inhalasjonskammer (Aerochamber, Optichamber, Babyhaler eller lignende) for å sikre at barnet får pustet inn medisinen på riktig måte.  Ventoline skal alltid tas FØR inhalasjonssteroider, dersom de skal brukes samtidig. Vent 5 minutter etter Ventoline for å sikre at lungene er åpne, slik at steroidsprayen kommer lengst mulig ned i lungene.
	</string>
	<string name="SeretideInfo">Alle sprayinhalasjoner må gis med inhalasjonskammer (Aerochamber, Optichamber, Babyhaler eller lignende) for å sikre at barnet får pustet inn medisinen på riktig måte. Etter inhalasjon med steroider må barnet alltid skylle munn, drikke eller pusse tenner for å fjerne rester av pulver fra munnen. Blir restene igjen i munnen kan det oppstå en smertefull soppinfeksjon i munnen.
	</string>
	<string name="NextMonth">&gt;&gt;</string>
	<string name="PreviousMonth">&lt;&lt;</string>
	<string name="app_name">BloppAsthma</string>
    <string name="action_settings">Settings</string>
    <string name="Shop">Shop</string>
    <string name="StartTreatment">Trykk på medisinen for å starte</string>
    <string name="Avatar">Avatar</string>
    <string name="neste">Neste</string>
    <string name="replay">Replay</string>
    <string name="manual">Velg medisin for å få informasjon om korrekt bruk</string>
    <string name="DisplayRewards">See Prizes Won</string>
    <string name="Instructions">Instructions</string>
    <string name="DistractionInstructions">Pust inn 10 ganger!</string>
    <string name="Empty"></string>
    <string name="StartDistractionInstructions">Finn medisinen og trykk på meg når du er klar!"</string>
    <string name="RewardsText">Gratulerer! Du fikk %d stjerne!&quot;</string>
    <string name="DistractionFinishedText">Bra jobba! Åpne kisten for å se premien din!</string>
	<string name="post_error">En feil oppstod under opplasting av data. Vennligst sjekk internett-tilkoblingen din.</string>
	<string name="medicationGreeting">Hei! Nå er det tid for medisin!</string>
	<string name="medicationInstruction1">Nå kan du hente den %s medisinen.</string>
	<string name="medicationInstruction2">Rist den %s medisinen!</string>
	<string name="medicationInstruction3">Gjør deg klar!</string>
	<string name="medicationInstructionCountup">Pust inn og ut!</string>
	<string name="connect_message">Du er ikke koblet til internett. Vennligst koble enheten til internett og prøv igjen</string>
	<string name="get_photo">Ta bilde med kamera</string>
	<string name="save_photo">Lagre bilde og returner</string>
	<string name="order_rewards">Kjøp</string>
	<string name="is_bought">Kjøpt</string>
	<string name="order">Bestilt</string>
	<string name="buy_dialog">Vil du kjøpe %s</string>
	<string name="not_ordered">Ikke bestilt</string>
	<string name="not_bought">Ikke kjøpt</string>
	<string name="reward_menu_item">Belønning</string>
	<string name="medicine_topbar">Medisinforbruk</string>
	<string name="airquality_topbar">Luftkvalitet i Trondheim</string>
	<string name="pollen_topbar">Pollen</string>
	<string name="choose_reward_image">Velg bilde</string>
	<string name="treatment_choose_medicine">Velg medisin</string>
	<string name="alarm_drag_message">Dra medisinen til masken for å starte</string>
	<string name="alarm_time_to_take">Det er på tide å ta medisin</string>
	<string name="create_new_pin">For å anonymisere barnet ditt sine data, må du taste inn en valgfri PIN-kode. Vennligst ikke bruk samme PIN-kode som du bruker for å låse opp telefonen. PIN-koden kan være mellom 4 og 8 sifre.</string>
	<string name="answer_pin_challenge">Tast inn din PIN-kode for å starte BloppAsthma. </string>
	<string name="pin_error_message">PIN-kodene du tastet inn var ulike. Prøv på nytt</string>
	<string name="pin_length_error_message">PIN-kode må være mellom 4 og 8 siffer</string>
	<string name="pin_repeat_message">Gjenta PIN-kode. </string>
	<string name="pin_challenge_failed">PIN-koden du trykket inn er feil. Prøv på nytt. </string>
	<string name="sync">Synkroniser</string>
	<string name="cancel">Avbryt</string>
	<string name="sync_menu_title">Synkroniser med</string>
	<string name="ok">OK</string>
	<string name="add_ip">Legg til IP</string>
	<string name="kidlabeltext">Barn</string>
	<string name="parentlabeltext">Voksne</string>
</resources>