<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >	<TextView
		android:id="@+id/distraction_finished_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="4dp"
      	android:text="@string/DistractionFinishedText"
      	android:textAppearance="?android:attr/textAppearanceLarge" />
    <ImageView
        android:id="@+id/distraction_finished_chest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/chest_closed"
        android:contentDescription="@string/Empty" />

    <GridView
        android:id="@+id/rewards_grid"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:padding="5dp"
        android:numColumns="5" >
    </GridView>
    
    <TextView
        android:id="@+id/distraction_finished_reward_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RewardsText"
      	android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>