<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/next_month_button"
        style="?android:attr/buttonStyleSmall"
        android:background="@layout/custom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/NextMonth" />

    <Button
        android:id="@+id/prev_month_button"
        style="?android:attr/buttonStyleSmall"
        android:background="@layout/custom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/PreviousMonth" />

    <TextView
        android:id="@+id/month_of_year_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/prev_month_button"
        android:layout_alignBottom="@+id/prev_month_button"
        android:layout_centerHorizontal="true"
        android:text="September 2012"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <com.blopp.bloppasthma.views.CalendarView
        android:id="@+id/calendarview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/month_of_year_textview" />



		    <ListView
		        android:id="@+id/medicine_taken_listView"
		        android:layout_width="match_parent"
		        android:layout_height="150dp"
		        android:layout_alignParentBottom="true"
		        android:layout_alignParentLeft="true"
		        android:dividerHeight="0dp"
		        android:divider="@null"
		        android:layout_alignRight="@+id/medicinetopbar"
		        android:layout_marginLeft="5dp"
		        android:layout_alignTop="@+id/airquality_listview" >
		
		    </ListView>
		    
		    <ListView
		        android:id="@+id/airquality_listview"
		        android:layout_width="match_parent"
		        android:layout_height="150dp"
		        android:layout_alignParentBottom="true"
		        android:layout_toLeftOf="@+id/pollen_listView"
		        android:layout_toRightOf="@+id/medicine_taken_listView" >
		
		    </ListView>
		
		    <ListView
		        android:id="@+id/pollen_listView"
		        android:layout_width="match_parent"
		        android:layout_height="150dp"
		        android:layout_marginRight="5dp"
		        android:dividerHeight="0dp"
		        android:divider="@null"
		        android:layout_alignLeft="@+id/pollentopbar"
		        android:layout_alignParentBottom="true"
		        android:layout_alignParentRight="true" >
		    </ListView>
		
		    <TextView
		        android:id="@+id/medicinetopbar"
		        android:layout_width="70dp"
		        android:layout_height="wrap_content"
		        android:layout_above="@+id/medicine_taken_listView"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="5dp"
		        android:gravity="center"
		        android:text="@string/medicine_topbar"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="12sp" />
		
		    <TextView
		        android:id="@+id/pollentopbar"
		        android:layout_width="70dp"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/medicinetopbar"
		        android:layout_alignParentRight="true"
		        android:layout_alignTop="@+id/medicinetopbar"
		        android:layout_marginRight="5dp"
		        android:gravity="center"
		        android:text="@string/pollen_topbar"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="12sp" />
		
		    <TextView
		        android:id="@+id/airqualitytopbar"
		        android:layout_width="70dp"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/medicinetopbar"
		        android:layout_alignTop="@+id/medicinetopbar"
		        android:layout_toLeftOf="@+id/pollentopbar"
		        android:layout_toRightOf="@+id/medicinetopbar"
		        android:gravity="center"
		        android:text="@string/airquality_topbar"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="12sp" />

</RelativeLayout>